move to native toURL method